# autostrategy

./: .gitignore  Dockerfile  README.md  UI-PLAN.md  config.yaml  pyproject.toml
api/: __init__.py  main.py  scanner.py
autostrategy/: __init__.py  llm.py  loop.py  main.py
autostrategy/analyze/: debate.py
autostrategy/backtest/: engine.py
autostrategy/evolution/: __init__.py  lessons.py
autostrategy/generator/: __init__.py  coder.py
templates/: dashboard.html  strategy_detail.html
